<resources>
    <string name="app_name">Battlefield1648</string>
    <string name="spiel_starten">Spiel Starten</string>
    <string name="turns">Benötigte Turns:</string>
    <string name="slash"> / </string>
    <string name="survived">Überlebt:</string>
    <string name="hauptmenu">Zum Hauptmenü</string>
    <string name="allitems">AllItems</string>
    <string name="entdeckt">Entdeckt:</string>
    <string name="eliminierte_gegner">Eliminierte Gegner:</string>
    <string name="dein_ergbenis">Dein Ergbenis:</string>
    <string name="deine_objekte">Deine Objekte:</string>
    <string name="gesamtpunktzahl">Gesamtpunktzahl:</string>
    <string name="game_over">GAME OVER</string>
    <string name="gesammelte_objekte">Gesammelte Objekte:</string>
    <string name="title_activity_preference_screen">PreferenceScreen</string>
    <string name="title_activity_ranking_screen">RankingScreen</string>
    <string name="battlefield_1648">Battlefield 1648</string>
    <string name="back">zurück</string>
    <string name="schwierigkeit">Schwierigkeit:</string>
    <string name="raute">#</string>
</resources>
