<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
    android:text="@string/game_over"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
    android:fontFamily="sans-serif"
    android:textSize="36sp"
    android:textAlignment="center"
    android:textColor="@color/colorTextMenu"
    android:textStyle="normal|bold"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/textView2"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:background="@drawable/background_rounded"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:bottomRightRadius="20dp"
        android:bottomLeftRadius="7dp"
        android:topLeftRadius="7dp"
        android:topRightRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/layout_items">

            <TextView
            android:text="@string/gesammelte_objekte"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextMenu"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:id="@+id/items"
            android:layout_marginLeft="10dp"
                android:layout_width="0dp" />

            <TextView
                android:id="@+id/items_input"
                android:text="YourItems"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:paddingRight="10dp" />

            <TextView
            android:id="@+id/slash"
            android:text="@string/slash"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorTextMenu"
            android:textStyle="normal|bold"
            android:layout_width="0dp"
            android:paddingRight="10dp"
            android:layout_weight="0.1" />

            <TextView
            android:id="@+id/itemsTotal"
            android:text="@string/allitems"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorTextMenu"
            android:textStyle="normal|bold"
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_marginRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/layout_turns"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:id="@+id/layout_survived"
            android:layout_weight="1">

            <TextView
                android:id="@+id/survived"
                android:text="@string/turns"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:paddingEnd="10dp"
                android:layout_width="0dp" />

            <TextView
                android:id="@+id/survived_bool"
                android:text="YourNumTurns"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:id="@+id/layout_discovered"
            android:layout_weight="1">

            <TextView
                android:id="@+id/discovered"
                android:text="@string/entdeckt"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:paddingEnd="10dp"
                android:layout_width="0dp" />

            <TextView
                android:id="@+id/discovered_bool"
                android:text="Count"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:id="@+id/layout_kills"
            android:layout_weight="1">

            <TextView
                android:id="@+id/kills"
                android:text="@string/eliminierte_gegner"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:paddingEnd="10dp"
                android:layout_width="0dp" />

            <TextView
                android:id="@+id/kills_count"
                android:text="Count"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:id="@+id/layout_fate"
            android:layout_weight="1">

            <TextView
                android:id="@+id/fate"
                android:text="@string/dein_ergbenis"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:layout_width="0dp" />

            <TextView
                android:id="@+id/fate_result"
                android:text="Your Fate"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:id="@+id/layout_itmeslist"
            android:layout_weight="1">

            <TextView
                android:id="@+id/itemslist"
                android:text="@string/deine_objekte"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:paddingRight="10dp"
                android:layout_width="0dp" />

            <TextView
                android:id="@+id/itemslist_input"
                android:text="YourItems"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:id="@+id/layout_count"
            android:layout_weight="1">

            <TextView
                android:id="@+id/count"
                android:text="@string/gesamtpunktzahl"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:paddingRight="10dp"
                android:layout_width="0dp" />

            <TextView
                android:id="@+id/count_input"
                android:text="YourCredits"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextMenu"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/hauptmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_menu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:background="@color/button_color"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorTextMenu"
        android:textStyle="normal|bold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

</RelativeLayout>